# ytsync

./: Cargo.toml
src/: config.rs  lib.rs  main.rs  request.rs
youtube/: Cargo.toml
youtube/src/: auth.rs  lib.rs  param.rs  playlist.rs
