[package]
name = "ytsync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["youtube"]

[dependencies]
youtube = {path = "youtube"}
reqwest = { version = "0.11.24", features = ["json"]}
clap = { version = "4.5", features = ["derive", "string"] }
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
clap-serde-derive = "0.2.1"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.11"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
color-eyre = "0.6.2"
